--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "browser-sync": "^2.26.5",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^6.1.0",
@@ -22,6 +23,7 @@
     "gulp-imagemin": "^6.2.0",
     "gulp-postcss": "^10.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-rollup": "^2.17.0",
     "gulp-sass": "^5.0.0",
     "gulp-terser": "^2.1.0",
     "gulp-uglify": "^3.0.2",
